# kalpa

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.nix/: README.md  build.nix  default.nix  package.nix  run.nix  shell.nix
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: auth.rs  configure.rs  generate.rs  jobs.rs  mod.rs  models.rs  status.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  dispatcher.rs  error.rs  factory.rs  generation.rs  http.rs  jobs.rs  lib.rs  provider.rs  ratelimit.rs  registry.rs  retry.rs  types.rs
crates/core/src/auth/: mod.rs  vertex_oauth.rs
crates/core/src/providers/: claude.rs  falai.rs  gemini.rs  mod.rs  openai.rs  vertex.rs
crates/libgen/: Cargo.toml  build.rs
crates/libgen/specs/: claude.json  falai.json  gemini.json  openai.json  vertex.json
crates/libgen/src/: lib.rs
docs/: FALAI_INTEGRATION.md  FALAI_QUICKSTART.md  VERTEX_AI_COMPLETE.md  VERTEX_AI_SETUP.md
