[package]
name = "kalpa-core"
description = "Core traits and types for AI provider integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
dirs.workspace = true
kalpa-libgen.workspace = true
rand = "0.8"
reqwest.workspace = true
rsa = "0.9"
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.10", features = ["oid"] }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid = { version = "1.0", features = ["v4"] }
